- проблема с повторными запусками в режиме пользователя (#1)

--- a/Sapsan2/Sapsan2-24M.wxs
+++ b/Sapsan2/Sapsan2-24M.wxs
@@ -24,12 +24,15 @@
 		<?define AppRegKey="$(var.ProductRegKey)"?>
 
 		<?define AppFileExt=rhl?>
+		<?define AppFileExts=rhl;prt?>
 		<!--<?define AppVersionIndependentProgId="$(var.ProductProgIdPrefix).$(var.AppInternalName)"?>-->
-		<?define AppProgId="$(var.ProductProgIdPrefix).$(var.AppInternalName).$(var.AppMajorVersion).$(var.AppMinorVersion)"?>
-		<?define AppProgIdDescription="Файл продукта &quot;$(var.AppShortName)&quot;"?>
+		<!--<?define AppProgId="$(var.ProductProgIdPrefix).$(var.AppInternalName).$(var.AppMajorVersion).$(var.AppMinorVersion)"?>-->
+		<?define AppProgId="rhlfile"?>
+		<?define AppProgIds=rhlfile;prtfile?>
+		<?define AppProgIdDescription='Файл продукта "$(var.AppShortName)"'?>
 		<?define AppContentType="$(var.AppContentTypePrefix)-$(var.AppFileExt).document"?>
 
-		<?define AddProgIds=rhlfile;prtfile?>
+		<?define AppRegKeySddl="D:AI(A;CI;KA;;;BU)(A;;KR;;;BU)(A;CIIO;GR;;;BU)(A;;KA;;;BA)(A;CIIO;GA;;;BA)(A;;KA;;;SY)(A;CIIO;GA;;;SY)(A;CIIO;GA;;;CO)(A;;KR;;;AC)(A;CIIO;GR;;;AC)"?>
 
 		<Feature
 			Id="$(var.AppInternalName)"
@@ -60,14 +63,9 @@
 		<ComponentGroup Id="$(var.AppInternalName)Components">
 			<ComponentRef	Id="$(var.AppInternalName)" Primary="yes"/>
 			<ComponentRef Id="$(var.AppInternalName).SetInst24.dat"/>
-			<ComponentRef Id="$(var.AppInternalName).AppReg"/>
-			<ComponentRef Id="$(var.AppInternalName).Shell.VerbsFlags"/>
-			<ComponentRef Id="$(var.AppInternalName).Shell.New.$(var.AppFileExt)"/>
-			<?foreach ProgId in $(var.AddProgIds)?>
-			<ComponentRef Id="$(var.AppInternalName).$(var.ProgId)"/>
+			<?foreach FileExt in $(var.AppFileExts)?>
+			<ComponentRef Id="common.RemoveProgId.$(var.FileExt)_auto_file"/>
 			<?endforeach?>
-			<ComponentRef Id="common.RemoveProgId.$(var.AppFileExt)_auto_file"/>
-			<ComponentRef Id="common.RemoveProgId.prt_auto_file"/>
 		</ComponentGroup>
 
 		<DirectoryRef Id="$(var.AppDirectory)" FileSource=".\SourceDir\ProgramFiles\$(var.AppDirectoryName)">
@@ -122,11 +120,12 @@
 					Description="$(var.AppProgIdDescription)"
 					Icon="$(var.AppIcon)"
 					Advertise="yes"
-	>
+				>
 					<?ifdef $(var.AppVersionIndependentProgId)?>
 					<ProgId
 						Id="$(var.AppVersionIndependentProgId)"
 						Description="$(var.AppProgIdDescription)"
+						Icon="$(var.AppIcon)"
 					/>
 					<?endif?>
 					<Extension
@@ -143,6 +142,13 @@
 							Argument='"%1"'
 						/>
 					</Extension>
+				</ProgId>
+				<ProgId
+					Id="prtfile"
+					Description="$(var.AppProgIdDescription)"
+					Icon="$(var.AppIcon)"
+					Advertise="yes"
+				>
 					<Extension
 						Id="prt"
 						Advertise="yes"
@@ -158,14 +164,21 @@
 						/>
 					</Extension>
 				</ProgId>
-			</Component>
 
-			<Component
-				Id="$(var.AppInternalName).AppReg"
-			>
+				<?foreach FileExt in $(var.AppFileExts)?>
+				<RegistryKey
+					Root="HKCR"
+					Key=".$(var.FileExt)"
+					ForceCreateOnInstall="yes"
+					ForceDeleteOnUninstall="yes"
+				>
+					<PermissionEx Sddl="$(var.AppRegKeySddl)"/>
+				</RegistryKey>
+				<?endforeach?>
+
 				<!-- http://msdn.microsoft.com/ru-RU/library/windows/desktop/ee872121(v=vs.85).aspx -->
 				<RegistryKey
-					Root="HKMU"
+					Root="HKLM"
 					Key="SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths"
 				>
 					<?foreach AppFileNameAlias in $(var.AppFileNameAliases)?>
@@ -183,27 +196,28 @@
 						<RegistryValue Name="FriendlyAppName" Type="string" Value="$(var.AppShortName)" />
 						<RegistryValue Name="NoOpenWith" Type="integer" Value="0" />
 						<RegistryKey Key="SupportedTypes">
-							<RegistryValue Name=".$(var.AppFileExt)" Type="string" Value="" />
-							<RegistryValue Name=".prt" Type="string" Value="" />
+							<?foreach FileExt in $(var.AppFileExts)?>
+							<RegistryValue Name=".$(var.FileExt)" Type="string" Value="" />
+							<?endforeach?>
 						</RegistryKey>
 					</RegistryKey>
 				</RegistryKey>
 				<RegistryKey
-					Root="HKMU"
+					Root="HKLM"
 					Key="SOFTWARE\RegisteredApplications"
 				>
 					<RegistryValue Name="$(var.AppProgId)" Type="string" Value="$(var.AppRegKey)\Capabilities" />
 				</RegistryKey>
 				<RegistryKey
-					Root="HKMU"
+					Root="HKLM"
 					Key="$(var.AppRegKey)\Capabilities"
 				>
-					<RegistryValue Name="ApplicationName" Type="string" Value="$(var.AppShortName)" KeyPath="yes" />
+					<RegistryValue Name="ApplicationName" Type="string" Value="$(var.AppShortName)" />
 					<RegistryValue Name="ApplicationDescription" Type="string" Value="$(var.AppDescription)" />
 					<RegistryValue Name="Hidden" Type="integer" Value="0" />
 					<RegistryKey Key="FileAssociations">
 						<RegistryValue Name=".$(var.AppFileExt)" Type="string" Value="$(var.AppProgId)" />
-						<RegistryValue Name=".prt" Type="string" Value="$(var.AppProgId)" />
+						<RegistryValue Name=".prt" Type="string" Value="prtfile" />
 					</RegistryKey>
 					<RegistryKey Key="MIMEAssociations">
 						<RegistryValue Name="$(var.AppContentType)" Type="string" Value="$(var.AppProgId)" />
@@ -211,20 +225,19 @@
 					</RegistryKey>
 				</RegistryKey>
 				<RegistryKey
-					Root="HKMU"
+					Root="HKLM"
 					Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\KindMap"
 				>
-					<RegistryValue Name=".$(var.AppFileExt)" Type="string" Value="Document" />
-					<RegistryValue Name=".prt" Type="string" Value="Document" />
+					<?foreach FileExt in $(var.AppFileExts)?>
+					<RegistryValue Name=".$(var.FileExt)" Type="string" Value="Document" />
+					<?endforeach?>
 				</RegistryKey>
-			</Component>
 
-			<Component
-				Id="$(var.AppInternalName).Shell.VerbsFlags"
-			>
 				<RegistryKey
 					Root="HKCR"
 					Key="$(var.AppProgId)"
+					ForceCreateOnInstall="yes"
+					ForceDeleteOnUninstall="yes"
 				>
 					<!-- http://msdn.microsoft.com/en-us/library/windows/desktop/bb762506(v=vs.85).aspx -->
 					<!-- FTA_HasExtension(0x4) + FTA_NoEdit(0x8) + FTA_NoRemove(x10) + FTA_NoNewVerb(x20) + FTA_NoEditVerb(x40)
@@ -232,7 +245,7 @@
 						+ FTA_NoEditVerbCmd(x800) + FTA_NoEditVerbExe(x1000) + FTA_NoDDE(x2000) + FTA_NoEditMIME(x4000)
 						+ FTA_OpenIsSafe(0x00010000) + !FTA_AlwaysUnsafe(0x00020000) + 
 						+ !FTA_NoRecentDocs(0x00100000) + !FTA_SafeForElevation(0x00200000) + !FTA_AlwaysUseDirectInvoke(0x00400000) -->
-					<RegistryValue Name="EditFlags" Type="integer" Value="98300" KeyPath="yes" />
+					<RegistryValue Name="EditFlags" Type="integer" Value="98300" />
 
 					<!-- http://msdn.microsoft.com/en-us/library/windows/desktop/bb986055.aspx#MSDNMag2001Nov -->
 					<!--!!! http://windowssucks.wordpress.com/file-type-registration/ -->
@@ -259,21 +272,63 @@
 							<RegistryValue Name="MultiSelectModel" Type="string" Value="Document"/>
 						</RegistryKey>
 					</RegistryKey>
+					<PermissionEx Sddl="$(var.AppRegKeySddl)"/>
+					<RegistryKey
+						Key="DefaultIcon"
+						ForceCreateOnInstall="yes"
+					>
+						<PermissionEx Sddl="$(var.AppRegKeySddl)"/>
+					</RegistryKey>
 				</RegistryKey>
-			</Component>
 
-			<!--<Component
-				Id="$(var.AppInternalName).Shell.New.$(var.AppFileExt).template"
-			>
-				<File
-					Name="template.$(var.AppFileExt)"
-					KeyPath="yes"
-					Vital="no"
-				/>
-			</Component>-->
-			<Component
-				Id="$(var.AppInternalName).Shell.New.$(var.AppFileExt)"
-			>
+				<RegistryKey
+					Root="HKCR"
+					Key="prtfile"
+					ForceCreateOnInstall="yes"
+					ForceDeleteOnUninstall="yes"
+				>
+					<!-- http://msdn.microsoft.com/en-us/library/windows/desktop/bb762506(v=vs.85).aspx -->
+					<!-- FTA_HasExtension(0x4) + FTA_NoEdit(0x8) + FTA_NoRemove(x10) + FTA_NoNewVerb(x20) + FTA_NoEditVerb(x40)
+						+ FTA_NoRemoveVerb(x80) + FTA_NoEditDesc(x100) + FTA_NoEditIcon(x200) + FTA_NoEditDflt(x400)
+						+ FTA_NoEditVerbCmd(x800) + FTA_NoEditVerbExe(x1000) + FTA_NoDDE(x2000) + FTA_NoEditMIME(x4000)
+						+ FTA_OpenIsSafe(0x00010000) + !FTA_AlwaysUnsafe(0x00020000) + 
+						+ !FTA_NoRecentDocs(0x00100000) + !FTA_SafeForElevation(0x00200000) + !FTA_AlwaysUseDirectInvoke(0x00400000) -->
+					<RegistryValue Name="EditFlags" Type="integer" Value="98300" />
+
+					<!-- http://msdn.microsoft.com/en-us/library/windows/desktop/bb986055.aspx#MSDNMag2001Nov -->
+					<!--!!! http://windowssucks.wordpress.com/file-type-registration/ -->
+					<!--<RegistryValue Name="InfoTip" Type="string" Value="" />-->
+					<!--<RegistryValue Name="TileInfo" Type="string" Value="" />-->
+					<!--<RegistryValue Name="NoOpen" Type="string" Value="Сообщение для NoOpen диалога" />-->
+					<RegistryValue Name="NoOpenWith" Type="string" Value="" />
+					<!--<RegistryValue Name="NoPreviousVersions" Type="string" Value="" />-->
+					<!--<RegistryValue Name="NoJumpListPathTooltip" Type="string" Value="" />-->
+					<!--<RegistryValue Name="NoRecentDocs" Type="string" Value="" />-->
+					<!--<RegistryValue Name="NeverShowExt" Type="string" Value="" />-->
+					<!--<RegistryValue Name="NoSendTo" Type="string" Value="" />-->
+					<!--<RegistryValue Name="DownloadInvokeDisabled" Type="string" Value="" />-->
+					<!-- http://msdn.microsoft.com/en-us/library/windows/desktop/cc144152#fa_attributes -->
+					<!--<RegistryValue Name="AllowSilentDefaultTakeOver" Type="string" Value="" />-->
+					<RegistryValue Name="AppUserModelID " Type="string" Value="prtfile" />
+
+					<!-- http://msdn.microsoft.com/en-us/library/windows/desktop/hh127468 -->
+					<!--<RegistryValue Name="ContentViewModeForBrowse " Type="string" Value="" />-->
+
+					<RegistryKey Key="shell">
+						<RegistryKey Key="open">
+							<!-- http://msdn.microsoft.com/en-us/library/windows/desktop/cc144171#dynamic_behavior -->
+							<RegistryValue Name="MultiSelectModel" Type="string" Value="Document"/>
+						</RegistryKey>
+					</RegistryKey>
+					<PermissionEx Sddl="$(var.AppRegKeySddl)"/>
+					<RegistryKey
+						Key="DefaultIcon"
+						ForceCreateOnInstall="yes"
+					>
+						<PermissionEx Sddl="$(var.AppRegKeySddl)"/>
+					</RegistryKey>
+				</RegistryKey>
+
 				<RegistryKey
 					Root="HKCR"
 					Key=".$(var.AppFileExt)"
@@ -281,7 +336,7 @@
 					<RegistryKey Key="$(var.AppProgId)">
 						<RegistryKey Key="ShellNew">
 							<!-- http://msdn.microsoft.com/en-us/library/windows/desktop/cc144101(v=vs.85).aspx -->
-							<RegistryValue Name="NullFile" Type="string" Value="" KeyPath="yes" />
+							<RegistryValue Name="NullFile" Type="string" Value="" />
 							<!--<RegistryValue Name="FileName" Type="string" Value="[#template.$(var.AppFileExt)]" KeyPath="yes" />-->
 							<RegistryKey Key="Config">
 								<RegistryValue Name="AllDrives" Type="string" Value="" />
@@ -289,35 +344,36 @@
 						</RegistryKey>
 					</RegistryKey>
 				</RegistryKey>
+
 			</Component>
 
-			<?include Common.RemoveAutoFile.wxi ?>
-
+			<?foreach FileExt in $(var.AppFileExts)?>
 			<Component
-				Id="common.RemoveProgId.prt_auto_file"
+				Id="common.RemoveProgId.$(var.FileExt)_auto_file"
 			>
 				<RegistryKey
 					Root="HKCU"
-					Key="SOFTWARE\Classes\.prt"
+					Key="$(var.AppRegKey)"
 				>
-					<RegistryValue Name="AutoProgIdRemoved" Type="integer" Value="1" KeyPath="yes" />
+					<RegistryValue Name="$(var.FileExt)_AutoProgIdRemoved" Type="integer" Value="1" KeyPath="yes" />
 				</RegistryKey>
 				<RemoveRegistryKey
 					Root="HKCU"
-					Key="SOFTWARE\Classes\.prt\OpenWithProgids"
+					Key="SOFTWARE\Classes\.$(var.FileExt)\OpenWithProgids"
 					Action="removeOnInstall"
 				/>
 				<RemoveRegistryKey
 					Root="HKCU"
-					Key="SOFTWARE\Classes\prt_auto_file"
+					Key="SOFTWARE\Classes\$(var.FileExt)_auto_file"
 					Action="removeOnInstall"
 				/>
 				<RemoveRegistryKey
 					Root="HKCU"
-					Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.prt"
+					Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.$(var.FileExt)"
 					Action="removeOnInstall"
 				/>
 			</Component>
+			<?endforeach?>
 
 			<Component
 				Id="$(var.AppInternalName).SetInst24.dat"
@@ -330,30 +386,6 @@
 					Vital="yes"
 				/>
 			</Component>
-
-			<?foreach ProgId in $(var.AddProgIds)?>
-			<Component
-				Id="$(var.AppInternalName).$(var.ProgId)"
-				Location="either"
-			>
-				<!-- указанный ниже ProgId создаю только для того, чтобы предоставить приложению права на его изменение -->
-				<RegistryKey
-					Root="HKCR"
-					Key="$(var.ProgId)"
-					ForceCreateOnInstall="yes"
-					ForceDeleteOnUninstall="yes"
-				>
-					<RegistryValue Type="string" Value="Вспомогательное ProgId для продукта $(var.ProductName)"/>
-					<RegistryValue Name="NoOpenWith" Type="string" Value=""/>
-					<PermissionEx Sddl="D:AI(A;CI;KA;;;BU)(A;;KR;;;BU)(A;CIIO;GR;;;BU)(A;;KA;;;BA)(A;CIIO;GA;;;BA)(A;;KA;;;SY)(A;CIIO;GA;;;SY)(A;CIIO;GA;;;CO)(A;;KR;;;AC)(A;CIIO;GR;;;AC)"/>
-					<RegistryKey
-						Key="DefaultIcon"
-					>
-						<RegistryValue Type="string" Value="" KeyPath="yes"/>
-					</RegistryKey>
-				</RegistryKey>
-			</Component>
-			<?endforeach?>
 
 		</DirectoryRef>
 
