* итого, собрана редакция для Сапсан 2-24М (#1)

--- a/Sapsan2/Sapsan2-24M.wxs
+++ b/Sapsan2/Sapsan2-24M.wxs
@@ -221,7 +221,7 @@
 					</RegistryKey>
 					<RegistryKey Key="MIMEAssociations">
 						<RegistryValue Name="$(var.AppContentType)" Type="string" Value="$(var.AppProgId)" />
-						<RegistryValue Name="$(var.AppContentTypePrefix)-prt.document" Type="string" Value="$(var.AppProgId)" />
+						<RegistryValue Name="$(var.AppContentTypePrefix)-prt.document" Type="string" Value="prtfile" />
 					</RegistryKey>
 				</RegistryKey>
 				<RegistryKey
